Replace connect with browserSync in gulp process, base new project off early commit from profile-jonward

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,14 +2,10 @@ html {
     body {
         height: 100%;
         width: 100%;
-        background-color: #f0f0f0;
+        background-color: #000;
     }
 }
 
 .full-height {
     height: 100%;
-}
-
-.content-height {
-    max-height: 60vh;
 }
