Replace title for index page

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="profile-carpadium">
 <head>
     <meta charset="UTF-8">
-    <title>Jon Ward : Musician</title>
+    <title>c a r p a d i u m</title>
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
     <link rel="stylesheet" href="style.css">
 </head>
