Comment out audio toolbar until implemented, add and style navbar, add bandcamp and facebook links

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,7 @@
 </head>
 <body ng-controller="ApplicationController as appCtrl" class="full-height">
 
+    <div ng-include="'components/navbar/navbar.tpl.html'"></div>
     <div ng-include="'components/main/main.tpl.html'"></div>
 
     <script src="node_modules/angular/angular.min.js"></script>
