--- a/src/app/components/main/main.tpl.html
+++ b/src/app/components/main/main.tpl.html
@@ -1,21 +1,15 @@
 
-<div id="social-media-toolbar">
-    <a href="https://www.facebook.com/drsciencefl/" target="_blank">
-        <img src="img/icon-fb.png" alt="">
-    </a>
-</div>
-
-<div id="audio-toolbar">
+<!--<div id="audio-toolbar">
     <div ng-click='audio.paused ? audio.play() : audio.pause()' id="play-icon">
         <i class="fa flex" ng-class="{'fa-play-circle-o': audio.paused, 'fa-pause-circle-o': !audio.paused}"></i>
     </div>
-</div>
+</div>-->
 
-<div id="audio-slider" ng-if="!audio.paused">
+<!--<div id="audio-slider" ng-if="!audio.paused">
     <md-slider type="range" step="0.01" class="flex" min="0" max="1" ng-model="audio.progress" class=""></md-slider>
-</div>
+</div>-->
 
-<div class="container">
+<div class="container album-cover">
     <md-content>
 
     </md-content>
