Center and flex album cover, improve navbar layout

--- a/src/app/components/navbar/navbar.tpl.html
+++ b/src/app/components/navbar/navbar.tpl.html
@@ -1,9 +1,12 @@
-<div id="social-media-toolbar" class="layout-column navbar-height layout-align-space-between md-padding-right">
+<div id="social-media-toolbar" class="md-padding-right layout-row layout-align-space-around">
     <a href="https://www.facebook.com/Carpadium-117669584941260/" target="_blank">
-        <div class="circle icon-fb"></div>
+        <div class="circle icon-fb float"></div>
     </a>
     <a href="https://carpadium.bandcamp.com/" target="_blank">
-        <div class="circle icon-bandcamp"></div>
+        <div class="md-padding-left float">
+            <div class="circle icon-bandcamp"></div>
+        </div>
+
     </a>
 
 </div>
