--- a/src/app/components/main/main.tpl.html
+++ b/src/app/components/main/main.tpl.html
@@ -9,11 +9,7 @@
     <md-slider type="range" step="0.01" class="flex" min="0" max="1" ng-model="audio.progress" class=""></md-slider>
 </div>-->
 
-<div class="container album-cover">
-    <md-content>
-
-    </md-content>
-    <div class="layout-column">
-
-    </div>
+<div class="container layout-row layout-fill layout-align-center-center flex">
+    <div ng-include="'components/navbar/navbar.tpl.html'"></div>
+    <div class="album-cover album-cover-frame"></div>
 </div>
