--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,8 +8,7 @@
 </head>
 <body ng-controller="ApplicationController as appCtrl" class="full-height">
 
-    <div ng-include="'components/navbar/navbar.tpl.html'"></div>
-    <div ng-include="'components/main/main.tpl.html'"></div>
+    <div class="layout-row layout-fill layout-align-center-center" ng-include="'components/main/main.tpl.html'"></div>
 
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -19,6 +18,6 @@
     <script src="application.module.js"></script>
     <script src="application.controller.js"></script>
     <script src="components/components.module.js"></script>
-    <script src="components/main/main.module.js"></script>
+
 </body>
 </html>
