--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,8 +11,6 @@ html {
 }
 
 body {
-    margin: 0;
-    padding-top: 5vh;
     overflow-y: hidden;
     background-color: #000;
 }
@@ -47,20 +45,6 @@ a {
     position: relative;
     margin: 0 auto;
     border-radius: 20px;
-}
-
-#social-media-toolbar {
-    position: absolute;
-    right: 10px;
-    top: 3vh;
-    height: 80px;
-    width: 80px;
-}
-
-#social-media-toolbar img {
-    height: 60px;
-    width: 60px;
-    cursor: pointer;
 }
 
 #audio-toolbar {
@@ -104,11 +88,15 @@ a {
 
 .container {
     margin: 0 auto;
-    max-width: 90vh;
-    height: 90vh;
+    max-width: 80vh !important;
+    max-height: 80vh !important;
+}
+
+.album-cover-frame {
     background-color: #f6f6f6;
     box-shadow: 0px 0px 0px 9px grey;
 }
+
 
 .center {
     text-align: center;
