--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,3 +1,10 @@
+#social-media-toolbar {
+    position: absolute;
+    right: 10px;
+    top: 5vh;
+    width: 120px;
+}
+
 .navbar-height {
     height: 110px !important;
 }
